feat: Add Richard Hernandez and Jessy projects to latest projects section

--- a/index.html
+++ b/index.html
@@ -379,6 +379,56 @@
             </a>
           </div>
         </div>
+
+        <!-- Richard Hernández Project -->
+        <div class="latest-project-card" data-project="richard-hernandez">
+          <div class="project-card-bg">
+            <video class="project-card-video" autoplay muted loop playsinline preload="metadata" poster=""
+              aria-hidden="true">
+              <source src="r.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="project-card-overlay">
+            <div class="project-card-content">
+              <div class="project-icon">
+                <i class="fas fa-gem" aria-hidden="true"></i>
+              </div>
+              <h3 class="project-title">Richard Hernández</h3>
+              <p class="project-description">Wedding & Event Creative Director</p>
+            </div>
+            <a href="https://primaveraeventsgroup.com/richard-hernandez/" target="_blank" rel="noopener noreferrer"
+              class="project-link" aria-label="View Richard Hernández project">
+              <span>View Project</span>
+              <i class="fas fa-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+
+        <!-- Jessy Project -->
+        <div class="latest-project-card" data-project="jessy">
+          <div class="project-card-bg">
+            <video class="project-card-video" autoplay muted loop playsinline preload="metadata" poster=""
+              aria-hidden="true">
+              <source src="y.mp4" type="video/mp4">
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="project-card-overlay">
+            <div class="project-card-content">
+              <div class="project-icon">
+                <i class="fas fa-heart" aria-hidden="true"></i>
+              </div>
+              <h3 class="project-title">Jessy</h3>
+              <p class="project-description">Wedding & Event Planner</p>
+            </div>
+            <a href="https://primaveraeventsgroup.com/jessy/" target="_blank" rel="noopener noreferrer"
+              class="project-link" aria-label="View Jessy project">
+              <span>View Project</span>
+              <i class="fas fa-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
